added 5-day forecast cards

--- a/index.css
+++ b/index.css
@@ -22,13 +22,22 @@ body {
 .flex {
   position: relative;
   left: 50%;
-  bottom: 10em;
+  bottom: 14em;
 }
 
 .weatherBox {
-  color: black;
-  background-color: white;
-  font-size: 1.5rem;
-  width: 40%;
+  color: rgb(0, 0, 0);
+  background-color: #8bc6ec;
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+
+  font-size: 2rem;
+  width: 30%;
   height: 50%;
+  font-weight: 500;
+  padding-left: 1.5rem;
+}
+
+#displayName {
+  font-size: 2.5rem;
+  font-weight: bold;
 }
