--- a/index.css
+++ b/index.css
@@ -41,3 +41,15 @@ body {
   font-size: 2.5rem;
   font-weight: bold;
 }
+
+.flexCards {
+  display: inline;
+  justify-content: space-between;
+}
+
+.allCards {
+  width: 17%;
+  height: 20%;
+  text-align: center;
+  font-size: 2rem;
+}
