--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   background: #536976;
   background: -webkit-linear-gradient(to right, #292e49, #536976);
   background: linear-gradient(to right, #292e49, #536976);
-
+  overflow-x: hidden;
   color: white;
 }
 
@@ -21,8 +21,8 @@ body {
 
 .flex {
   position: relative;
-  left: 50%;
-  bottom: 14em;
+  left: 49.2%;
+  bottom: 17.8em;
 }
 
 .weatherBox {
@@ -44,8 +44,7 @@ body {
 
 .flexCards {
   display: flex;
-  justify-content: space-around;
-  margin-bottom: 2rem;
+  justify-content: center;
 }
 
 .allCards {
@@ -54,6 +53,17 @@ body {
   text-align: center;
   font-size: 2rem;
   display: flex;
-  align-content: center;
-  justify-content: space-between;
+  position: relative;
+  bottom: 9em;
+  left: 4.5em;
+}
+
+#forecast {
+  font-size: 3rem;
+  height: 20%;
+  width: 20%;
+  position: relative;
+  left: 19.26em;
+  bottom: 5.68em;
+  text-align: center;
 }
