--- a/index.css
+++ b/index.css
@@ -55,7 +55,6 @@ body {
   display: flex;
   position: relative;
   bottom: 9em;
-  left: 4.5em;
 }
 
 #forecast {
@@ -63,7 +62,8 @@ body {
   height: 20%;
   width: 20%;
   position: relative;
-  left: 19.26em;
+  left: 21em;
   bottom: 5.68em;
   text-align: center;
+  margin-top: 1rem;
 }
