--- a/index.css
+++ b/index.css
@@ -35,6 +35,9 @@ body {
   height: 50%;
   font-weight: 500;
   padding-left: 1.5rem;
+  display: none;
+  border: solid black 3px;
+  border-radius: 5px;
 }
 
 #displayName {
